# sdc-extract-composition

./: .gitignore  CLAUDE.md  COMPOSITION_DESIGN.md  README.md  package-lock.json  pyproject.toml  requirements.txt  vercel.json
api/: index.py
docs/: cts-structure-analysis.md  fhir-liquid-templating.md  sdc-template-extraction.md
examples/: cts-form-specification.txt
iterations-backup/01-liquid-template/: questionnaire-extract.json  questionnaire-response.json
iterations-backup/04-mr-rectum/: composition.json  (+3 more)
mockups/: 01-sections-only.html  DESIGN.md  ai-agent-animations.html  ai-empty-state.html  ai-loading-states.html  answer-mappings-alternatives.html  answer-mappings-v2.html  context-condition-builder-v2.html  context-condition-builder.html  experiment-add-buttons-v2.html  experiment-add-buttons.html  experiment-add-subsection.html  experiment-choice-mapping-v2.html  experiment-choice-mapping.html  experiment-context-badge.html  experiment-filter-reorder.html  experiment-formatting-panel.html  experiment-formula-bar-v2.html  experiment-formula-bar-v3.html  experiment-formula-bar.html  experiment-pill-editing.html  pill-truncation-options.html  pill-with-filters-visible.html
resources/: composition-template.json
src/: generate_html.py  render_template_preview.py
tests/: test_designation.py  test_filters.py
viewer/: .env.example  .gitignore  index.html  package-lock.json  package.json  pnpm-lock.yaml  test-wasm.mjs  vite.config.ts
viewer/backend/: agent.py  composition_builder.py  main.py  pyproject.toml  renderer.py  test_renderer.py
(+131 files in other folders)
