[project]
name = "sdc-extract-composition"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "fhirpathpy>=2.1.0",
    "jinja2>=3.1.0",
    "pydantic>=2.0",
    "python-liquid2>=0.3.0",
    "weasyprint>=68.1",
]
