[project]
name = "sdc-extract-composition"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "fhirpathpy>=2.1.0",
    "jinja2>=3.1.0",
    "markdown>=3.7",
    "pydantic>=2.0",
    "python-liquid2>=0.3.0",
    "weasyprint>=68.1",
    "mammoth>=1.12.0",
    "pydantic-ai[google,logfire]>=1.87.0,<1.88.0",
    "pydantic-ai-slim[google,logfire]>=1.87.0,<1.88.0",
    "pydantic-ai-harness[code-mode]>=0.2.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
